monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2107/A2107a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2107;

grammar A2107a {
  interface A;

  abstract B extends A;

}
